# MinNet

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Function.hpp  LICENSE  Layer.cpp  Layer.hpp  MinNet.cpp  Optimizer.cpp  Optimizer.hpp  README.md  Tensor.cpp  Tensor.hpp  Transformation.cpp  Transformation.hpp  mnist.cpp  mnist.hpp
example/: CMakeLists.txt  CmakeLists.txt  MinNet.cpp
example/include/: Dataset.hpp  cifa10.hpp  mnist.hpp
example/script/: download_mnist.py
example/src/: CMakeLists.txt  Dataset.cpp  cifa10.cpp  mnist.cpp
include/: Function.hpp  Layer.hpp  Optimizer.hpp  Tensor.hpp  Transformation.hpp  Util.hpp
src/: CMakeLists.txt  Function.cpp  Layer.cpp  Optimizer.cpp  Tensor.cpp  Util.cpp  cifa10.cpp
